# binrubyscript

./: Cargo.toml  README.md
src/: main.rs
src/embedded_ruby/: binrubyscript.rb
src/embedded_ruby/lib/: secondary.rb
